--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <meta name="theme-color" content="#f6f4ef">
 
 <!-- iPhone ホーム画面用 -->
-<link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png?v=5">
-<link rel="apple-touch-icon" sizes="167x167" href="./apple-touch-icon-167.png?v=5">
-<link rel="apple-touch-icon" sizes="152x152" href="./apple-touch-icon-152.png?v=5">
-<link rel="apple-touch-icon" sizes="120x120" href="./apple-touch-icon-120.png?v=5">
+<link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png?v=6">
+<link rel="apple-touch-icon" sizes="167x167" href="./apple-touch-icon-167.png?v=6">
+<link rel="apple-touch-icon" sizes="152x152" href="./apple-touch-icon-152.png?v=6">
+<link rel="apple-touch-icon" sizes="120x120" href="./apple-touch-icon-120.png?v=6">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="default">
 <meta name="apple-mobile-web-app-title" content="立て替え入力">
@@ -152,6 +152,30 @@ input[type="date"]{
 .toast.ng{ background:#fdecec; color:var(--bad); }
 .toast.show{ display:block; }
 
+/* デバッグ（必要なときだけ開く） */
+details.debug{
+  margin-top:10px;
+  border:1px dashed rgba(107,107,107,.35);
+  border-radius:14px;
+  padding:10px 12px;
+  background: rgba(255,255,255,.55);
+}
+details.debug summary{
+  cursor:pointer;
+  color: var(--muted);
+  font-size:12px;
+  font-weight:700;
+  outline:none;
+}
+pre.debug{
+  margin:10px 0 0;
+  white-space:pre-wrap;
+  word-break:break-word;
+  font-size:11px;
+  line-height:1.35;
+  color: rgba(43,43,43,.78);
+}
+
 /* 履歴 */
 .history{
   margin-top:16px;
@@ -289,6 +313,12 @@ input[type="date"]{
       </button>
     </form>
 
+    <!-- デバッグ（必要なら開いてコピペできる） -->
+    <details class="debug" id="dbgBox">
+      <summary>通信ができないとき（デバッグ情報）</summary>
+      <pre class="debug" id="dbg"></pre>
+    </details>
+
     <div class="history">
       <div class="historyTitle">
         <span>このiPhoneの送信履歴</span>
@@ -310,6 +340,8 @@ const list = $("list");
 const overlay = $("overlay");
 const btnText = $("btnText");
 const btnSpin = $("btnSpin");
+const dbg = $("dbg");
+const dbgBox = $("dbgBox");
 
 function showToast(type,msg){
   toast.className = "toast show " + type;
@@ -369,6 +401,16 @@ function normalizeAmount(v){
   return Number.isFinite(n) ? n : 0;
 }
 
+function setDebug(obj){
+  try{
+    dbg.textContent = JSON.stringify(obj, null, 2);
+    dbgBox.open = true;
+  }catch{
+    dbg.textContent = String(obj);
+    dbgBox.open = true;
+  }
+}
+
 $("date").value=today();
 renderHistory();
 
@@ -379,14 +421,18 @@ $("clear").onclick=()=>{
   setTimeout(hideToast,1200);
 };
 
+// ★送信を form-urlencoded に統一（iOS/ホーム画面追加で落ちにくい）
 $("form").onsubmit = async (e) => {
   e.preventDefault();
   hideToast();
+  dbg.textContent = "";
+  dbgBox.open = false;
 
   const passcode = (localStorage.getItem(LS_PASS) || "").trim();
   if (!passcode){
     showToast("ng","合言葉が未設定です（翔吾に設定してもらってね）");
     addHistory($("date").value, $("desc").value.trim() || "-", "送信失敗");
+    setDebug({ reason: "passcode_empty", hint: "localStorage(LS_PASS) が空です" });
     return;
   }
 
@@ -396,21 +442,28 @@ $("form").onsubmit = async (e) => {
 
   if(!date || !amount || !desc){
     showToast("ng","入力を確認してください");
+    setDebug({ reason: "invalid_input", date, amount, desc_len: desc.length });
     return;
   }
 
-  const payload = { passcode, date, amount, desc };
+  const payload = { passcode, date, amount: String(amount), desc };
 
   setLoading(true);
 
+  let res = null;
+  let raw = "";
+  let data = null;
+
   try{
     const controller = new AbortController();
-    const timer = setTimeout(() => controller.abort(), 15000); // 15秒でタイムアウト
+    const timer = setTimeout(() => controller.abort(), 15000);
 
-    const res = await fetch(GAS_ENDPOINT, {
+    const body = new URLSearchParams(payload).toString();
+
+    res = await fetch(GAS_ENDPOINT, {
       method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify(payload),
+      headers: { "Content-Type": "application/x-www-form-urlencoded;charset=UTF-8" },
+      body,
       cache: "no-store",
       redirect: "follow",
       signal: controller.signal,
@@ -418,14 +471,18 @@ $("form").onsubmit = async (e) => {
 
     clearTimeout(timer);
 
-    // 文字列で受けてからJSON化（GASがたまにtext/htmlを返すケース対策）
-    const txt = await res.text();
-    let data = null;
-    try { data = JSON.parse(txt); } catch { data = null; }
+    raw = await res.text();
+    try { data = JSON.parse(raw); } catch { data = null; }
 
     if (!data){
       showToast("ng","通信結果を読み取れませんでした");
       addHistory(date, desc, "送信失敗");
+      setDebug({
+        reason: "json_parse_failed",
+        http_status: res.status,
+        response_preview: raw.slice(0, 500),
+        note: "GASがHTML/ログイン画面等を返している可能性"
+      });
       return;
     }
 
@@ -438,31 +495,42 @@ $("form").onsubmit = async (e) => {
       return;
     }
 
-    // エラー種別ごとに表示
+    // エラー種別ごとに表示（奥さん向けに噛み砕く）
     if (data.error === "unauthorized"){
       showToast("ng","合言葉が違うかも（翔吾に確認してね）");
       addHistory(date, desc, "送信失敗");
+      setDebug({ reason: "unauthorized", data });
       return;
     }
     if (data.error === "zaim_not_authorized"){
       showToast("ng","初回設定が必要です（翔吾に言ってね）");
       addHistory(date, desc, "送信失敗");
+      setDebug({ reason: "zaim_not_authorized", data });
       return;
     }
     if (data.error === "invalid_input" || data.error === "invalid_date_format"){
       showToast("ng","入力内容を確認してください");
       addHistory(date, desc, "送信失敗");
+      setDebug({ reason: "invalid_input_from_server", data });
       return;
     }
 
-    // それ以外
     showToast("ng","送信できませんでした");
     addHistory(date, desc, "送信失敗");
+    setDebug({ reason: "server_returned_error", data });
 
   } catch (err){
     const isAbort = String(err && err.name) === "AbortError";
     showToast("ng", isAbort ? "通信が混み合ってるかも（もう一度）" : "通信できませんでした");
-    addHistory($("date").value, $("desc").value.trim() || "-", "送信失敗");
+    addHistory(date, desc, "送信失敗");
+
+    setDebug({
+      reason: "fetch_failed",
+      name: err && err.name,
+      message: String(err),
+      hint: "GASの公開設定が『全員』でない/ログイン画面に飛んでいる/通信環境の可能性",
+      endpoint: GAS_ENDPOINT
+    });
   } finally{
     setLoading(false);
     setTimeout(hideToast,1600);
